--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@ html {
     text-align: center;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2em ;
+    margin-bottom: 1000px;
 }
 
 }
